--- a/app/src/main/res/layout/item_movie_trending.xml
+++ b/app/src/main/res/layout/item_movie_trending.xml
@@ -14,6 +14,7 @@
         />
     <TextView
         android:id="@+id/tv_title"
+        android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
