--- a/app/src/main/res/layout/item_movie_trending.xml
+++ b/app/src/main/res/layout/item_movie_trending.xml
@@ -3,8 +3,8 @@
     xmlns:mocloud="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_weight="1"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <com.floatingmuseum.mocloud.widgets.RatioImageView
         android:id="@+id/iv_poster"
