--- a/app/src/main/res/layout/activity_moviedetail.xml
+++ b/app/src/main/res/layout/activity_moviedetail.xml
@@ -3,103 +3,85 @@
     xmlns:mocloud="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:padding="10dp"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+>
 
         <com.floatingmuseum.mocloud.widgets.RatioImageView
             android:id="@+id/poster"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            mocloud:image_ratio="1.42"/>
+            mocloud:image_ratio="1.42" />
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="center_horizontal"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+            <TextView
+                style="@style/detail_title"
+                android:text="@string/movie_title" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="@string/director" />
+            <TextView
+                android:id="@+id/tv_movie_title"
+                style="@style/detail_content"
+                tools:text="TRON: Legacy" />
 
-                <TextView
-                    android:id="@+id/tv_director"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="Joseph Kosinski" />
-            </LinearLayout>
+            <TextView
+                style="@style/detail_title"
+                android:text="@string/released" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_released"
+                style="@style/detail_content"
+                tools:text="December 10, 2010" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="@string/released" />
 
-                <TextView
-                    android:id="@+id/tv_released"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="December 10, 2010" />
-            </LinearLayout>
+            <TextView
+                style="@style/detail_title"
+                android:text="@string/run_time" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_runtime"
+                style="@style/detail_content"
+                tools:text="125 mins" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="@string/run_time" />
 
-                <TextView
-                    android:id="@+id/tv_runtime"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="125 mins" />
-            </LinearLayout>
+            <TextView
+                style="@style/detail_title"
+                android:text="@string/language" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_language"
+                style="@style/detail_content"
+                tools:text="English" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="@string/language" />
+            <TextView
+                style="@style/detail_title"
+                android:text="@string/rating" />
 
-                <TextView
-                    android:id="@+id/tv_language"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="English" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/tv_rating"
+                style="@style/detail_content"
+                tools:text="6.5" />
         </LinearLayout>
 
-
     </LinearLayout>
+    <TextView
+        style="@style/detail_title"
+        android:text="@string/overview" />
+    <TextView
+        android:id="@+id/tv_overview"
+        style="@style/detail_content"
+        android:gravity="left"
+        tools:text="Sam Flynn, the tech-savvy and daring son of Kevin Flynn, investigates his father's disappearance and is pulled into The Grid. With the help of a mysterious program named Quorra, Sam quests to stop evil dictator Clu from crossing into the real world." />
 </LinearLayout>
