--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,19 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="detail_text">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+
+    <style name="detail_title" parent="detail_text">
+        <item name="android:textColor">@color/detail_title</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+    <style name="detail_content" parent="detail_text">
+        <item name="android:color">@color/detail_content</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
 </resources>
