--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
 
     <color name="detail_title">#000000</color>
     <color name="detail_content">#778899</color>
+
+    <color name="comment_title_grey">#E5E5E5</color>
+    <color name="comment_content_grey">#F1F1F1</color>
 </resources>
