--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/comment_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/comment_title_grey"
