--- a/app/src/main/res/layout/item_movie_trending.xml
+++ b/app/src/main/res/layout/item_movie_trending.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mocloud="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_weight="1"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="1dp">
 
     <com.floatingmuseum.mocloud.widgets.RatioImageView
         android:id="@+id/iv_poster"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:scaleType="fitXY"
         mocloud:image_ratio="1.42"
         />
-    <TextView
-        android:id="@+id/tv_title"
-        android:gravity="center_horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
-</LinearLayout>
+    <!--<TextView-->
+        <!--android:id="@+id/tv_title"-->
+        <!--android:gravity="center_horizontal"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content" />-->
+
+</RelativeLayout>
