--- a/app/src/main/res/layout/item_movie_box_office.xml
+++ b/app/src/main/res/layout/item_movie_box_office.xml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mocloud="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="1dp">
+    android:layout_height="wrap_content">
 
     <com.floatingmuseum.mocloud.widgets.RatioImageView
-        android:id="@+id/iv_banner"
+        android:id="@+id/iv_fanart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        mocloud:image_ratio="1.42"
-        />
+        android:scaleType="centerCrop"
+        mocloud:image_ratio="0.6"
+        tools:src="@drawable/default_fanart" />
 
-    <!--<TextView-->
-    <!--android:id="@+id/tv_title"-->
-    <!--android:gravity="center_horizontal"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content" />-->
-
+    <TextView
+        android:id="@+id/tv_box_movie_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/iv_fanart"
+        android:layout_alignParentLeft="true"
+        android:layout_margin="2dp"
+        android:textSize="24sp"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:textColor="@color/white_text"
+        tools:text="Captain America: Civil War" />
 </RelativeLayout>
