--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,7 @@
     <color name="spoiler_transparent">#99000000</color>
     <color name="blur_bg">#50ffffff</color>
     <color name="white_text">#FFFFFF</color>
+    <color name="loading">#80171b</color>
+    <color name="unreached_progress_color">#80171b</color>
+    <color name="reached_progress_color">#1D1D1D</color>
 </resources>
