--- a/app/src/main/res/layout/item_movie_box_office.xml
+++ b/app/src/main/res/layout/item_movie_box_office.xml
@@ -6,18 +6,18 @@
     android:layout_height="wrap_content">
 
     <com.floatingmuseum.mocloud.widgets.RatioImageView
-        android:id="@+id/iv_fanart"
+        android:id="@+id/iv_boxoffice_poster"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        mocloud:image_ratio="0.6"
+        mocloud:image_ratio="1.42"
         tools:src="@drawable/default_fanart" />
 
     <TextView
         android:id="@+id/tv_box_movie_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/iv_fanart"
+        android:layout_alignBottom="@+id/iv_boxoffice_poster"
         android:layout_alignParentLeft="true"
         android:layout_margin="2dp"
         android:textSize="24sp"
