--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="loading">#80171b</color>
     <color name="unreached_progress_color">#80171b</color>
     <color name="reached_progress_color">#1D1D1D</color>
+    <color name="main_movie_item_title" >#FFFFFF</color>
 </resources>
