--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,39 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <include layout="@layout/layout_appbar"/>
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <include layout="@layout/layout_appbar" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:id="@+id/ll_web_request"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <com.daimajia.numberprogressbar.NumberProgressBar
                 android:id="@+id/numberprogressbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                app:progress_unreached_bar_height="1dp"
                 app:progress_reached_bar_height="2dp"
-                app:progress_unreached_color="@color/unreached_progress_color"
-                app:progress_reached_color="@color/reached_progress_color"/>
+                app:progress_reached_color="@color/reached_progress_color"
+                app:progress_unreached_bar_height="1dp"
+                app:progress_unreached_color="@color/unreached_progress_color" />
+
             <WebView
                 android:id="@+id/webview"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="gone"/>
+                android:layout_height="match_parent" />
         </LinearLayout>
+
         <com.wang.avi.AVLoadingIndicatorView
+            android:visibility="gone"
             android:id="@+id/loading_token_request"
-            android:layout_centerInParent="true"
-            app:indicatorColor="@color/loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:indicatorName="LineScaleIndicator"/>
+            android:layout_centerInParent="true"
+            app:indicatorColor="@color/loading"
+            app:indicatorName="LineScaleIndicator" />
     </RelativeLayout>
 </LinearLayout>
