--- a/app/src/main/res/layout/activity_single_comment.xml
+++ b/app/src/main/res/layout/activity_single_comment.xml
@@ -5,21 +5,47 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/layout_appbar"/>
+    <include layout="@layout/layout_appbar" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/main_comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="5dp">
+
         <include layout="@layout/comment_item" />
     </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_replies"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_replies"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
+
+        <!--<LinearLayout-->
+        <!--android:background="@android:color/white"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:orientation="horizontal">-->
+
+        <!--<EditText-->
+        <!--android:id="@+id/comment_box"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="9" />-->
+
+        <!--<ImageView-->
+        <!--android:id="@+id/iv_reply"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"-->
+        <!--android:src="@drawable/send" />-->
+        <!--</LinearLayout>-->
+        <include layout="@layout/comment_layout" />
+    </RelativeLayout>
 </LinearLayout>
