now can send comment for a movie and a reply for a comment

--- a/app/src/main/res/layout/activity_single_comment.xml
+++ b/app/src/main/res/layout/activity_single_comment.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <include layout="@layout/layout_appbar" />
 
@@ -16,36 +15,13 @@
         <include layout="@layout/comment_item" />
     </android.support.v7.widget.CardView>
 
-    <RelativeLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_replies"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/main_comment"
+        android:layout_above="@+id/ll_comments"/>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_replies"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    <include layout="@layout/comment_layout" />
 
-
-        <!--<LinearLayout-->
-        <!--android:background="@android:color/white"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:orientation="horizontal">-->
-
-        <!--<EditText-->
-        <!--android:id="@+id/comment_box"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_weight="9" />-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/iv_reply"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_weight="1"-->
-        <!--android:src="@drawable/send" />-->
-        <!--</LinearLayout>-->
-        <include layout="@layout/comment_layout" />
-    </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
