--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,6 +6,12 @@
             android:id="@+id/nav_my"
             android:icon="@drawable/drawer_user_black_48dp"
             android:title="My" />
+
+        <item
+            android:id="@+id/nav_lists"
+            android:icon="@drawable/drawer_list_black_48dp"
+            android:title="Lists" />
+
         <item
             android:id="@+id/nav_calendar"
             android:icon="@drawable/drawer_calendar_black_48dp"
