--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,4 +32,8 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="transparentText">
+        <item name="android:textColor" >#00000000</item>
+    </style>
+
 </resources>
